objects/APTS_Error_Code_Master__c.object
<CustomObject>
    <description>Holds data (like error code, error description, etc..) for integration</description>
    <fields>
        <fullName>APTS_Corrective_Action__c</fullName>
        <description>Lists corrective action(s) to be taken while an error is encountered</description>
        <label>Corrective Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Description__c</fullName>
        <description>Description of error</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Error_Code__c</fullName>
        <description>Unique error code associated to error</description>
        <label>Error Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Error_Message__c</fullName>
        <description>Actual message to be displayed to end user</description>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Error Code Master</label>
    <listViews>
        <fullName>AllErrors</fullName>
        <columns>NAME</columns>
        <columns>APTS_Error_Code__c</columns>
        <columns>APTS_Error_Message__c</columns>
        <columns>APTS_Description__c</columns>
        <columns>APTS_Corrective_Action__c</columns>
        <filterScope>Everything</filterScope>
        <label>AllErrors</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Error Code Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Error Code Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>